re PR tree-optimization/36008 (Function produces wrong results when inlined.)

PR tree-optimization/36008
	* fold-const.c (try_move_mult_to_index): If s == NULL, divide
	the original op1, rather than delta by step.

	* gcc.c-torture/execute/20080424-1.c: New test.

From-SVN: r134636